2005-01-08 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * According to Benoit's suggestion, and without any objection from anybody
      - methods SetxxxByNumber and GetxxxByNumber renamed as Setxxx and Getxxx
      - methods Dict::Print() and Dict::PrintByKey() merged into Dict::Print()
      - method gdcmDicomDirObject::GetEntry() renamed as 
         gdcmDicomDirObject::GetEntryHT() to avoid confusion (and compile error)

2005-01-07 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Now gdcm::Debug is clearly a copy/paste of VTK approach. You can manipulate
     you debug/warning message just as c++ streams which make them very convinient
     to use. Once this is stabilize I will change the ostringstrem to be
     redirected to a file (ofstream).
   * Properly support C99 extension: __FUNCTION__ which allow us to display
     the name of the function call (GNUC also allow __PRETTY_FUNCTION__ for c++)

2005-01-07 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * Removal of useless and dangerous methods :
         GetEntryByName, GetEntryVRByName, GetDocEntryByName, SetEntryByName
         GetDocEntryByName, GetEntryByName, GetDictEntryByName
	* Removal of usless methods :
         Dict::PrintByName, Dict::GetDictEntryByName
   * Commenting out of probabely useless methods :
         Dict::GetDictEntryNames()
         Dict::GetDictEntryNamesByCategory()
         DictSet::GetPubDictEntryNames()
         DictSet::GetPubDictEntryNamesByCategory()			
	* ENH : New Dicom Dictionnary (with Value Multiplicity) is now used 	
	* ENH : Use dicomTS.dic as described in 2004 version	
	* ENH : Removal out of the Dicom Dictionary of non dicom 'fourth' field
           Add         to the Dicom Dictionary of Dicom 'Value Multiplicity' field
			  Add Accessors on VM (Value Multiplicity), and VM related methods			  
   * ADD : Add a list of 'Dicom Attribute types', as found in
           http://medical.nema.org/dicom/2004/04_15PU.PDF